k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: suitora-api
  labels:
    app: suitora
    tier: api
spec:
  selector:
    app: suitora
    tier: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: suitora-redis
  labels:
    app: suitora
    tier: cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
  selector:
    app: suitora
    tier: cache
  type: ClusterIP
